gifts become available on or after their date

--- a/app/index.html
+++ b/app/index.html
@@ -44,52 +44,52 @@
         <p>Click to open each door on the advent calendar and discover a selection of gifts from Fenwick, as well as that day's giveaway prize. Unlock the magic of christmas now.</p>
        </header>
        <ul class="gifts">
-        <li class="gift tk-futura-pt gift-1 enabled" data-date="12/12/15" data-number="1">
-          <a href="#turtledoves"><span class="number">1</span></a>
+        <li class="gift tk-futura-pt gift-1" data-date="November 2, 2015" data-number="1">
+          <a href="#day-1"><span class="number">1</span></a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
-        <li class="gift tk-futura-pt gift-6" data-date="12/12/15" data-number="6">
-          <a href="#turtledoves"><span class="number">6</span></a>
+        <li class="gift tk-futura-pt gift-6" data-date="November 7, 2015" data-number="6">
+          <a href="#day-6"><span class="number">6</span></a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
-        <li class="gift tk-futura-pt gift-12" data-date="12/12/15" data-number="12">
-          <a href="#turtledoves"><span class="number">12</span></a>
+        <li class="gift tk-futura-pt gift-12" data-date="November 13, 2015" data-number="12">
+          <a href="#day-12"><span class="number">12</span></a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
-        <li class="gift tk-futura-pt gift-3" data-date="12/12/15" data-number="3">
-          <a href="#turtledoves"><span class="number">3</span></a>
+        <li class="gift tk-futura-pt gift-3" data-date="November 4, 2015" data-number="3">
+          <a href="#day-3"><span class="number">3</span></a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
-        <li class="gift tk-futura-pt gift-5" data-date="12/12/15" data-number="5">
-          <a href="#turtledoves"><span class="number">5</span></a>
+        <li class="gift tk-futura-pt gift-5" data-date="November 6, 2015" data-number="5">
+          <a href="#day-5"><span class="number">5</span></a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
-        <li class="gift tk-futura-pt gift-11" data-date="12/12/15" data-number="11">
-          <a href="#turtledoves"><span class="number">11</span>  </a>
+        <li class="gift tk-futura-pt gift-11" data-date="November 12, 2015" data-number="11">
+          <a href="#day-11"><span class="number">11</span>  </a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
-        <li class="gift tk-futura-pt gift-4" data-date="12/12/15" data-number="4">
-          <a href="#turtledoves"><span class="number">4</span></a>
+        <li class="gift tk-futura-pt gift-4" data-date="November 5, 2015" data-number="4">
+          <a href="#day-4"><span class="number">4</span></a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
-        <li class="gift tk-futura-pt gift-2 enabled" data-date="12/12/15" data-number="2">
+        <li class="gift tk-futura-pt gift-2" data-date="November 3, 2015" data-number="2">
           <a href="#day-2"><span class="number">2</span></a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
-        <li class="gift tk-futura-pt gift-9" data-date="12/12/15" data-number="9">
-          <a href="#turtledoves"><span class="number">9</span></a>
+        <li class="gift tk-futura-pt gift-9" data-date="November 10, 2015" data-number="9">
+          <a href="#day9"><span class="number">9</span></a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
-        <li class="gift tk-futura-pt gift-7" data-date="12/12/15" data-number="7">
-          <a href="#turtledoves"><span class="number">7</span></a>
+        <li class="gift tk-futura-pt gift-7" data-date="November 8, 2015" data-number="7">
+          <a href="#day-7"><span class="number">7</span></a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
-        <li class="gift tk-futura-pt gift-10" data-date="12/12/15" data-number="10">
-          <a href="#turtledoves"><span class="number">10</span></a>
+        <li class="gift tk-futura-pt gift-10" data-date="November 11, 2015" data-number="10">
+          <a href="#day-10"><span class="number">10</span></a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
-        <li class="gift tk-futura-pt gift-8" data-date="12/12/15" data-number="8">
-          <a href="#turtledoves"><span class="number">8</span></a>
+        <li class="gift tk-futura-pt gift-8" data-date="November 9, 2015" data-number="8">
+          <a href="#day-8"><span class="number">8</span></a>
           <span style="background-image:url('images/products/ph.jpg')" class="product"></span>
         </li>
        </ul>
@@ -139,7 +139,7 @@
       </article>
     </main>
     <footer class="footer">
-      &copy; Copyright of Telegraph Media Group Limited 2015 | <a href="">Terms and conditions</a>
+      &copy; Copyright of Telegraph Media Group Limited, 2015 | <a href="">Terms and conditions</a>
     </footer>
     
     <script id="day-closed" type="text/x-handlebars-template">
@@ -202,7 +202,8 @@
 
     <script>
       var adventData = {
-        startDate:"",
+        startDate:"November 2, 2015",
+        currentDate:"November 5, 2015",
         days:[{
           number:2,
           title:"Two Turtle Doves",
