add a version without the days in the menu

--- a/app/index-menu-no-days.html
+++ b/app/index-menu-no-days.html
@@ -73,20 +73,8 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse tk-futura-pt" id="header">
-          <ul class="nav navbar-nav visible-xs-block">
+          <ul class="nav navbar-nav visible-xs-block hidden-">
             <li><a class="load-tab" href="#home"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> 12 Days of Christmas</a></li>
-            <li><a class="load-tab select-day disabled" data-number="1" href="#day-1"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 1</a></li>
-            <li><a class="load-tab select-day disabled" data-number="2" href="#day-2"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 2</a></li>
-            <li><a class="load-tab select-day disabled" data-number="3" href="#day-3"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 3</a></li>
-            <li><a class="load-tab select-day disabled" data-number="4" href="#day-4"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 4</a></li>
-            <li><a class="load-tab select-day disabled" data-number="5" href="#day-5"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 5</a></li>
-            <li><a class="load-tab select-day disabled" data-number="6" href="#day-6"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 6</a></li>
-            <li><a class="load-tab select-day disabled" data-number="7" href="#day-7"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 7</a></li>
-            <li><a class="load-tab select-day disabled" data-number="8" href="#day-8"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 8</a></li>
-            <li><a class="load-tab select-day disabled" data-number="9" href="#day-9"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 9</a></li>
-            <li><a class="load-tab select-day disabled" data-number="10" href="#day-10"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 10</a></li>
-            <li><a class="load-tab select-day disabled" data-number="11" href="#day-11"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 11</a></li>
-            <li><a class="load-tab select-day disabled" data-number="12" href="#day-12"><span class="glyphicon glyphicon-gift" aria-hidden="true"></span> Day 12</a></li>
           </ul>
           <ul class="social-links nav navbar-nav navbar-right">
             <li class="">
@@ -194,7 +182,7 @@
         <div class="container">
           <header class="text-center">
             <p class="logo-fenwick hidden-xs"></p>
-            <p class="back tk-futura-pt hidden-xs"><a href="#home" class="load-tab">Advent Calendar</a></p>
+            <p class="back hidden-xs tk-futura-pt"><a href="#home" class="load-tab">Advent Calendar</a></p>
             <h1 class="h1 tk-futura-pt mb-0">Day {{number}}</h1>
             <h2 class="subheader tk-futura-pt ">{{title}}</h2>
             <p>{{description}}</p>
